--- a/app/src/main/res/layout/fragment_shoutouts.xml
+++ b/app/src/main/res/layout/fragment_shoutouts.xml
@@ -7,7 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/greyBackground"
         android:orientation="vertical">
 
         <com.google.android.material.tabs.TabLayout
