--- a/app/src/main/res/layout/fragment_shoutouts_tabs.xml
+++ b/app/src/main/res/layout/fragment_shoutouts_tabs.xml
@@ -41,7 +41,7 @@
             <Button
                 android:id="@+id/postButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
@@ -51,7 +51,7 @@
             <Button
                 android:id="@+id/cancelButton"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="end"
                 android:layout_marginEnd="20dp"
                 android:layout_weight="1"
@@ -59,23 +59,5 @@
                 android:text="@string/cancel"
                 tools:targetApi="lollipop" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/navEventsBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/events" />
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:id="@+id/shoutoutsTabList"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="0dp"-->
-<!--            android:layout_gravity="top"-->
-<!--            android:layout_weight="2"-->
-<!--            android:scrollbars="vertical"-->
-<!--            app:layoutManager="LinearLayoutManager"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/navEv" />-->
     </LinearLayout>
 </layout>
