--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -34,6 +34,7 @@
 
         <TextView
             android:id="@+id/title"
+            android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
@@ -45,8 +46,9 @@
 
         <TextView
             android:id="@+id/saveText"
-            android:layout_width="35dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginVertical="10dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/saveButton"
@@ -60,6 +62,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginVertical="10dp"
+            android:layout_marginEnd="10dp"
             android:background="#00FFFFFF"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
+            android:layout_marginStart="10dp"
             android:textColor="@color/goldenrod"
             app:date="@{event}"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +87,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
+            android:layout_marginStart="10dp"
             android:textColor="@color/white"
             app:desc="@{event}"
             app:layout_constraintStart_toStartOf="parent"
