--- a/app/src/main/res/layout/shoutout_item2.xml
+++ b/app/src/main/res/layout/shoutout_item2.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="shoutout"
-            type="com.example.nogrammers_android.shoutouts.Shoutout" />
+            name="shoutout2"
+            type="com.example.nogrammers_android.shoutouts.Shoutout2" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,20 +15,19 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/pfp"
+            android:id="@+id/pfp2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:pfp="@{shoutout}"
+            app:layout_constraintVertical_bias="0.416"
+            app:pfp2="@{shoutout2}"
             tools:srcCompat="@drawable/km1" />
 
         <TextView
-            android:id="@+id/author"
+            android:id="@+id/author2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -36,27 +35,26 @@
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
             android:textStyle="bold"
-            app:author="@{shoutout}"
-            app:layout_constraintBottom_toTopOf="@id/pfp"
-            app:layout_constraintStart_toEndOf="@id/pfp"
+            app:author2="@{shoutout2}"
+            app:layout_constraintStart_toEndOf="@id/pfp2"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Kanga" />
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/date2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
-            app:date="@{shoutout}"
-            app:layout_constraintBottom_toBottomOf="@+id/author"
+            app:date2="@{shoutout2}"
+            app:layout_constraintBottom_toBottomOf="@+id/author2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/author"
+            app:layout_constraintTop_toTopOf="@+id/author2"
             tools:text="now" />
 
         <TextView
-            android:id="@+id/msg"
+            android:id="@+id/msg2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="26dp"
@@ -68,10 +66,20 @@
             android:paddingEnd="0dp"
             android:paddingBottom="3dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/pfp"
-            app:layout_constraintTop_toTopOf="@+id/pfp"
-            app:msg="@{shoutout}"
+            app:layout_constraintStart_toEndOf="@+id/pfp2"
+            app:layout_constraintTop_toBottomOf="@+id/author2"
+            app:msg2="@{shoutout2}"
             tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tristique interdum nibh sit amet aliquam" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintStart_toStartOf="@+id/msg2"
+            app:layout_constraintTop_toBottomOf="@+id/msg2" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
