--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,5 @@
     <color name="greyText">#757575</color>
     <color name="greyOverlay">#66808080</color>
     <color name="greyButton">#C4C4C4</color>
-
+    <color name="greySearchBar">#E5E5E5</color>
 </resources>
