--- a/app/src/main/res/layout/fragment_announcements.xml
+++ b/app/src/main/res/layout/fragment_announcements.xml
@@ -17,8 +17,7 @@
             android:scrollbars="vertical"
             app:layoutManager="LinearLayoutManager"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/createAnnouncementBtn"
@@ -38,19 +37,19 @@
             android:id="@+id/transparentOverlay"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/greyOverlay"
             android:visibility="invisible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:background="@color/greyOverlay" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <FrameLayout
+            android:id="@+id/announcementsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/announcementsContainer"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
