--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,17 +31,25 @@
                 android:id="@+id/searchBarLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
-                android:layout_marginEnd="0dp"
                 android:visibility="gone"
                 tools:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/tagSearchBackArrow"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/ic_baseline_arrow_back_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/searchBarBackground"
+                    app:layout_constraintBottom_toBottomOf="@id/searchBarBackground" />
 
                 <ImageView
                     android:id="@+id/searchBarBackground"
                     android:layout_width="200dp"
                     android:layout_height="40dp"
+                    android:layout_marginHorizontal="10dp"
                     android:background="@drawable/search_bar"
-                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tagSearchBackArrow"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
@@ -61,7 +69,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="6dp"
                     android:background="@color/greySearchBar"
-                    android:hint="Search by tag"
+                    android:hint="Search by tag          "
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
                     android:textColor="@color/greyText"
                     android:textColorHint="@color/greyText"
                     android:textSize="16sp"
