--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -44,31 +44,16 @@
             app:title="@{event}"
             tools:text="asdfasdf" />
 
-        <TextView
-            android:id="@+id/saveText"
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/markAs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginVertical="10dp"
-            android:textColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="@+id/saveButton"
-            app:layout_constraintEnd_toStartOf="@id/saveButton"
-            app:layout_constraintTop_toTopOf="@+id/saveButton"
-            app:saveText="@{event}"
-            tools:text="Save" />
-
-        <ImageButton
-            android:id="@+id/saveButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginVertical="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="#00FFFFFF"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
             app:layout_constraintTop_toTopOf="parent"
-            app:savePic="@{event}"
-            tools:src="@drawable/heart" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="10dp"
+            android:spinnerMode="dropdown"
+            android:background="@color/white"/>
 
         <TextView
             android:id="@+id/date"
