Added reaction emojis and skeleton

--- a/app/src/main/res/layout/fragment_shoutouts_tabs.xml
+++ b/app/src/main/res/layout/fragment_shoutouts_tabs.xml
@@ -16,6 +16,8 @@
             android:layout_gravity="top"
             android:layout_weight="2"
             android:scrollbars="vertical"
+            android:paddingVertical="10dp"
+            android:clipToPadding="false"
             app:layoutManager="LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/transparentShoutoutsOverlay"
             app:layout_constraintEnd_toEndOf="parent"
