--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,15 @@
             app:titleTextAppearance="@style/TabHeader"
             app:titleTextColor="@color/olive">
 
+            <ImageView
+                android:id="@+id/tagSearchBackArrow"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:background="@drawable/ic_baseline_arrow_back_24"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/searchBarLayout"
                 android:layout_width="wrap_content"
@@ -35,21 +44,12 @@
                 tools:visibility="visible">
 
                 <ImageView
-                    android:id="@+id/tagSearchBackArrow"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/ic_baseline_arrow_back_24"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/searchBarBackground"
-                    app:layout_constraintBottom_toBottomOf="@id/searchBarBackground" />
-
-                <ImageView
                     android:id="@+id/searchBarBackground"
                     android:layout_width="200dp"
                     android:layout_height="40dp"
                     android:layout_marginHorizontal="10dp"
                     android:background="@drawable/search_bar"
-                    app:layout_constraintStart_toEndOf="@id/tagSearchBackArrow"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
