--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -15,7 +15,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="20dp">
+                android:layout_marginVertical="20dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:focusableInTouchMode="true">
 
                 <TextView
                     android:id="@+id/eventTitleHeader"
@@ -51,27 +54,46 @@
                     android:id="@+id/datePickerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/date"
+                    android:text="@string/start_date"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader" />
+                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
 
+                <TextView
+                android:id="@+id/dash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dash"
+                app:layout_constraintStart_toEndOf="@id/startTimePickerButton"
+                app:layout_constraintTop_toTopOf="@id/startTimePickerButton"
+                app:layout_constraintBottom_toBottomOf="@id/startTimePickerButton" />
                 <Button
                     android:id="@+id/startTimePickerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:text="@string/time"
+                    android:layout_marginStart="20dp"
+                    android:text="@string/start_time"
                     app:layout_constraintStart_toEndOf="@id/datePickerButton"
-                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader" />
+                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
 
                 <Button
                     android:id="@+id/endTimePickerButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:text="@string/time"
-                    app:layout_constraintStart_toEndOf="@id/startTimePickerButton"
-                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader" />
+                    android:text="@string/end_time"
+                    app:layout_constraintStart_toEndOf="@id/dash"
+                    app:layout_constraintTop_toBottomOf="@id/eventTimeHeader"
+                    android:textSize="16sp"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
 
                 <TextView
                     android:id="@+id/eventLocationHeader"
@@ -271,11 +293,20 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tagGroup" />
 
+                <ImageView
+                    android:id="@+id/eventImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxWidth="300dp"
+                    android:maxHeight="300dp"
+                    app:layout_constraintTop_toBottomOf="@id/addImageButton"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
                 <CheckBox
                     android:id="@+id/listservBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/addImageButton"
+                    app:layout_constraintTop_toBottomOf="@id/eventImage"
                     android:layout_marginTop="50dp"
                     app:layout_constraintStart_toStartOf="parent"
                     android:text="@string/send_to_listserv"/>
