--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -150,24 +150,50 @@
                     android:layout_marginHorizontal="10dp"
                     android:spinnerMode="dropdown" />
 
-                <DatePicker
-                    android:id="@+id/datePicker"
-                    android:layout_width="220dp"
-                    android:layout_height="130dp"
-                    android:calendarViewShown="false"
-                    android:datePickerMode="spinner"
-                    android:scaleX="1"
-                    android:scaleY="1"
+                <Button
+                    android:id="@+id/startDateButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/ordering" />
+                    app:layout_constraintTop_toBottomOf="@+id/ordering"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginStart="10dp"
+                    android:textSize="16sp"
+                    android:text="@string/start_date"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
+
+               <TextView
+                   android:id="@+id/dash"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="@string/dash"
+                   app:layout_constraintStart_toEndOf="@id/startDateButton"
+                   app:layout_constraintTop_toTopOf="@id/startDateButton"
+                   app:layout_constraintBottom_toBottomOf="@id/startDateButton" />
+                <Button
+                    android:id="@+id/endDateButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toEndOf="@+id/dash"
+                    app:layout_constraintTop_toBottomOf="@+id/ordering"
+                    android:layout_marginTop="20dp"
+                    android:textSize="16sp"
+                    android:text="@string/end_date"
+                    android:textColor="@color/black"
+                    android:background="@color/transparent"
+                    android:padding="0dp"/>
+
                 <TextView
                     android:id="@+id/format"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/datePicker"
+                    app:layout_constraintTop_toBottomOf="@id/startDateButton"
                     app:layout_constraintStart_toStartOf="parent"
                     android:text="@string/format"
-                    android:layout_marginHorizontal="10dp"/>
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="20dp"/>
                 <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/remoteBox"
                     android:layout_width="wrap_content"
@@ -224,8 +250,31 @@
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
                     app:layout_constraintTop_toBottomOf="@id/duncaroosBox"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:onClick="applyFilter"/>
+                    app:layout_constraintEnd_toEndOf="parent"/>
+                <DatePicker
+                    android:id="@+id/startDatePicker"
+                    android:layout_width="220dp"
+                    android:layout_height="130dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:background="@color/white"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
+                <DatePicker
+                    android:id="@+id/endDatePicker"
+                    android:layout_width="220dp"
+                    android:layout_height="130dp"
+                    android:calendarViewShown="false"
+                    android:datePickerMode="spinner"
+                    android:scaleX="1"
+                    android:scaleY="1"
+                    android:background="@color/white"
+                    android:visibility="gone"
+                    app:layout_constraintStart_toStartOf="@id/endDateButton"
+                    app:layout_constraintTop_toBottomOf="@+id/startDateButton" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
 
