Added Resources tab (#11)
* Finished main resources page

* Added forms tab of resources page

* Added social media page

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,6 +45,21 @@
         <item name="android:fontWeight" tools:targetApi="o">700</item>
     </style>
 
+    <style name="ResourceCell" parent="@android:style/TextAppearance">
+        <item name="android:textSize">30sp</item>
+        <item name="android:textColor">@color/olive</item>
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
+    <style name="ResourceCellFlat" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/acarisans_bold</item>
+        <item name="fontFamily">@font/acarisans_bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontWeight" tools:targetApi="o">700</item>
+    </style>
+
     <style name="RegularTextViewStyle" parent="android:Widget.TextView">
         <item name="android:textSize">19sp</item>
         <item name="android:fontFamily">@font/acarisans_regular</item>
