--- a/app/src/main/res/layout/fragment_create_announcement.xml
+++ b/app/src/main/res/layout/fragment_create_announcement.xml
@@ -55,10 +55,10 @@
             app:layout_constraintTop_toBottomOf="@+id/newAnnouncementTitle" />
 
         <CheckBox
-            android:id="@+id/pinAnnouncment"
+            android:id="@+id/markAsUrgentChckbx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pin_announcement_to_top_of_page"
+            android:text="@string/mark_as_urgent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/newAnnouncementTxt" />
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:text="@string/post_announcement"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pinAnnouncment" />
+            app:layout_constraintTop_toBottomOf="@+id/markAsUrgentChckbx" />
 
         <CheckBox
             android:id="@+id/postToFb"
