--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -98,6 +98,18 @@
         <item name="android:textSize">21sp</item>
     </style>
 
+    <style name="Widget.App.ChipUrgent" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/urgentRed</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textAppearance">@style/ChipTextUrgent</item>
+    </style>
+
+    <style name="ChipTextUrgent" parent="@android:style/TextAppearance">
+        <item name="android:fontFamily">@font/acarisans_regular</item>
+        <item name="fontFamily">@font/acarisans_regular</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <!-- Tab layout styling -->
     <style name="Widget.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
         <item name="tabTextAppearance">@style/TextAppearance.App.TabLayout</item>
